crates/biome_cli/tests/snapshots/main_commands_ci/print_minimal.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `ci.js`

```js
for(;true;);

```

# Termination Message

```block
ci ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
ci.js:1:6 lint/correctness/noConstantCondition 

```

```block
ci.js format 

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 2 errors.
```
